@@ -1,24 +1,9 @@
 package org.folio.inventory.storage.external;
 
+import static java.lang.String.format;
 import static org.apache.http.HttpStatus.SC_CREATED;
 import static org.apache.http.HttpStatus.SC_INTERNAL_SERVER_ERROR;
 import static org.folio.inventory.support.http.ContentType.APPLICATION_JSON;
-
-import java.util.ArrayList;
-import java.util.List;
-import java.util.concurrent.CompletableFuture;
-import java.util.function.Consumer;
-import java.util.stream.Collectors;
-
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import org.folio.inventory.common.domain.Failure;
-import org.folio.inventory.common.domain.Success;
-import org.folio.inventory.domain.BatchResult;
-import org.folio.inventory.domain.Metadata;
-import org.folio.inventory.domain.instances.Instance;
-import org.folio.inventory.domain.instances.InstanceCollection;
-import org.folio.inventory.support.http.client.Response;
 
 import io.vertx.core.AsyncResult;
 import io.vertx.core.buffer.Buffer;
@@ -27,6 +12,28 @@ import io.vertx.core.json.JsonArray;
 import io.vertx.core.json.JsonObject;
 import io.vertx.ext.web.client.HttpRequest;
 import io.vertx.ext.web.client.HttpResponse;
+import java.net.MalformedURLException;
+import java.net.URL;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.concurrent.CompletableFuture;
+import java.util.function.Consumer;
+import org.apache.http.HttpStatus;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.folio.inventory.common.Context;
+import org.folio.inventory.common.domain.Failure;
+import org.folio.inventory.common.domain.Success;
+import org.folio.inventory.domain.BatchResult;
+import org.folio.inventory.domain.Metadata;
+import org.folio.inventory.domain.instances.Instance;
+import org.folio.inventory.domain.instances.InstanceCollection;
+import org.folio.inventory.exceptions.ExternalResourceFetchException;
+import org.folio.inventory.exceptions.InternalServerErrorException;
+import org.folio.inventory.exceptions.NotFoundException;
+import org.folio.inventory.support.InstanceUtil;
+import org.folio.inventory.support.http.client.Response;
+import org.folio.inventory.support.http.client.SynchronousHttpClient;
 
 class ExternalStorageModuleInstanceCollection
   extends ExternalStorageModuleCollection<Instance>
@@ -35,17 +42,20 @@ class ExternalStorageModuleInstanceCollection
   private static final Logger LOGGER = LogManager.getLogger(ExternalStorageModuleInstanceCollection.class);
 
   private final String batchAddress;
+  private SynchronousHttpClient httpClient;
 
   ExternalStorageModuleInstanceCollection(
     String baseAddress,
     String tenant,
     String token,
+    String userId,
+    String requestId,
     HttpClient client) {
 
-    super(String.format("%s/%s", baseAddress, "instance-storage/instances"),
-      tenant, token, "instances", client);
+    super(format("%s/%s", baseAddress, "instance-storage/instances"),
+      tenant, token, userId, requestId, "instances", client);
 
-    batchAddress = String.format("%s/%s", baseAddress, "instance-storage/batch/instances");
+    batchAddress = format("%s/%s", baseAddress, "instance-storage/batch/instances");
   }
 
   @Override
@@ -60,8 +70,8 @@ class ExternalStorageModuleInstanceCollection
   }
 
   @Override
-  protected String getId(Instance record) {
-    return record.getId();
+  protected String getId(Instance instance) {
+    return instance.getId();
   }
 
   @Override
@@ -70,7 +80,7 @@ class ExternalStorageModuleInstanceCollection
 
     List<JsonObject> jsonList = items.stream()
       .map(this::mapToRequest)
-      .collect(Collectors.toList());
+      .toList();
 
     JsonObject batchRequest = new JsonObject()
       .put("instances", new JsonArray(jsonList))
@@ -115,5 +125,57 @@ class ExternalStorageModuleInstanceCollection
     String contentHeaderValue = response.getContentType();
     return statusCode == SC_CREATED
       || (statusCode == SC_INTERNAL_SERVER_ERROR && APPLICATION_JSON.equals(contentHeaderValue));
+  }
+
+  @Override
+  public Instance findByIdAndUpdate(String id, JsonObject instance, Context inventoryContext) {
+    try {
+      SynchronousHttpClient client = getSynchronousHttpClient(inventoryContext);
+      var url = individualRecordLocation(id);
+      var response = client.get(url);
+      var responseBody = response.getBody();
+
+      if (response.getStatusCode() == HttpStatus.SC_NOT_FOUND) {
+        LOGGER.warn("Instance not found by id - {} : {}", id, responseBody);
+        throw new NotFoundException(format("Instance not found by id - %s : %s", id, responseBody));
+      } else if (response.getStatusCode() != HttpStatus.SC_OK) {
+        LOGGER.warn("Failed to fetch Instance by id - {} : {}, {}",
+          id, responseBody, response.getStatusCode());
+        throw new ExternalResourceFetchException("Failed to fetch Instance record",
+          responseBody, response.getStatusCode(), null);
+      }
+
+      var jsonInstance = new JsonObject(responseBody);
+      var existingInstance = mapFromJson(jsonInstance);
+      var modified = modifyInstance(existingInstance, instance);
+      var modifiedInstance = mapToRequest(modified);
+
+      response = client.put(url, modifiedInstance);
+      if (response.getStatusCode() != 204) {
+        var errorMessage = format("Failed to update Instance by id - %s : %s, %s",
+          id, response.getBody(), response.getStatusCode());
+        LOGGER.warn(errorMessage);
+        throw new InternalServerErrorException(errorMessage);
+      }
+      return modified;
+    } catch (Exception ex) {
+      throw new InternalServerErrorException(
+        format("Failed to find and update Instance by id - %s : %s", id, ex));
+    }
+  }
+
+  private Instance modifyInstance(Instance existingInstance, JsonObject instance) {
+    instance.put(Instance.ID, existingInstance.getId());
+    JsonObject existing = JsonObject.mapFrom(existingInstance);
+    JsonObject mergedInstanceAsJson = InstanceUtil.mergeInstances(existing, instance);
+    return Instance.fromJson(mergedInstanceAsJson);
+  }
+
+  private SynchronousHttpClient getSynchronousHttpClient(Context context) throws MalformedURLException {
+    if (httpClient == null) {
+      httpClient = new SynchronousHttpClient(new URL(context.getOkapiLocation()), tenant, token, context.getUserId(), null, null);
+    }
+
+    return httpClient;
   }
 }
